# project-agent-L

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup-ci.sh
agent_l/: __init__.py  attention.py  chat.py  checkpoint.py  config.py  data.py  distillation.py  evaluation.py  generation.py  hyperparams.py  initialization.py  layers.py  logging_utils.py  model.py  moe.py  profiling.py  recurrent.py  streaming.py  tokenizer.py
agent_l/utils/: __init__.py  distributed.py  onnx_export.py  quantization.py  speculative.py  visualization.py
examples/: basic_usage.py
tests/: test_model.py  test_moe.py  test_recurrent.py
